# MedFusion

./: .env  .gitignore  Dockerfile  README.md  compare_reranker.py  docker-compose.yml  main.py  pyproject.toml  run.sh  setup.sh  te.txt  test_reranker.py
agent/: main.py  test.py
agent/database/: init_database.py  main.py  retriever.py  utils.py
agent/dataset/database/: retriever.py
agent/prompts/: system_prompt.txt
agent/src/: __init__.py  med_prompts.py  rag_model.py  utils.py
agent/src/prompts/: system_prompt.txt
agent/utils/: __init__.py  model_info.py
backend/: .env  README.md  main.py  schema.py  test.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  dependencies.py  message.py  routers.py
backend/src/auth/: auth.py
backend/src/db/: db.py
backend/src/migration/: action.py  main.py
backend/src/models/: messages.py  user.py
backend/src/repo/: message.py  user.py
backend/src/schemas/: auth.py  messages.py  user.py
backend/src/services/: auth.py  message.py
backend/src/utils/: repository.py  unitofwork.py
backend/worker/: base.py  tasks.py  utils.py
dataset/: test.py
docs/: README.md
frontend/: .gitignore  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/chat/: chat.component.html  chat.component.scss  chat.component.ts
frontend/src/app/dialog/: dialog.component.html  dialog.component.scss  dialog.component.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/models/: message.ts
frontend/src/environments/: environment.prod.ts  environment.ts
parser/: article_links.txt  latest_article_links.txt  parser.py
(+42 files in other folders)
