[tool.poetry]
name = "medfusion"
packages = [{include = "agent"}]
version = "0.1.0"
description = ""
authors = ["vilovnok <vilovnok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
qdrant-client = "^1.12.1"
datasets = "^3.1.0"
langchain-mistralai = "^0.2.1"
mistralai = "^1.2.0"
torch = "^2.5.1"
sentence-transformers = "^3.2.1"
langchain-qdrant = "^0.2.0"
rank-bm25 = "^0.2.2"
huggingface-hub = "^0.26.2"
langchain-huggingface = "^0.1.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
kombu = "^5.4.2"
celery = "^5.4.0"
redis = "^5.2.0"
gunicorn = "23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
