[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["r1char9"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.24"
python = ">=3.10,<3.13"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
qdrant-client = "^1.12.1"
datasets = "^3.1.0"
langchain-mistralai = "^0.2.1"
mistralai = "^1.2.0"
torch = "^2.5.1"
sentence-transformers = "^3.2.1"
langchain-qdrant = "^0.2.0"
rank-bm25 = "^0.2.2"
huggingface-hub = "^0.26.2"
langchain-huggingface = "^0.1.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
passlib = "^1.7.4"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"
mistral = "^19.0.0"
einops = "^0.8.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
onnxruntime = "^1.20.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
